force-app/main/default/objects/RecordPickerConfig__mdt/RecordPickerConfig__mdt.object-meta.xml
<CustomObject>
    <description>This metadata stores the main config info for a record picker component</description>
    <label>Record Picker Config</label>
    <pluralLabel>Record Picker Configs</pluralLabel>
</CustomObject>