force-app/main/default/objects/RecordPickerConfig__mdt/fields/DisplayFieldName__c.field-meta.xml
<CustomField>
    <fullName>DisplayFieldName__c</fullName>
    <description>This field stores the info as to what should be displayed while records are searched.</description>
    <label>Display Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>