force-app/main/default/objects/RecordPickerConfig__mdt/fields/DisplaySecondaryFields__c.field-meta.xml
<CustomField>
    <fullName>DisplaySecondaryFields__c</fullName>
    <description>This field accepts a comma seperate field values while will be used to display as secondary fields.</description>
    <label>Display Secondary Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>