force-app/main/default/objects/RecordPickerConfig__mdt/fields/ObjectAPI__c.field-meta.xml
<CustomField>
    <fullName>ObjectAPI__c</fullName>
    <description>This field represent the object api name</description>
    <label>Object API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>